# session-signals

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  SPEC.md  VERSIONING.md
scripts/: sync-version.mjs  test-subagents.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  config.rs  descriptor.rs  engine.rs  focus.rs  glyph.rs  hooks.rs  ignore.rs  lib.rs  listener.rs  main.rs  notify.rs  token.rs  tray.rs  windows.rs
src-tauri/tests/: hooks_install.rs
src/components/: StateGlyph.tsx  glyphShape.ts
src/settings/: Settings.css  Settings.tsx
src/state/: config.ts  types.ts  useConfig.ts
src/themes/: README.md  classic.ts  dusk.ts  index.ts  tokens.css  types.ts  useTheme.ts
src/widget/: Widget.css  Widget.tsx
