[package]
name = "cc-beacon"
version = "0.1.0"
description = "Beacon — desktop status indicator for Claude Code"
authors = ["Beacon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beacon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: tray support. image-png: decode our colored PNG tray icons at runtime.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# Single-instance guard so only one Beacon owns the listener port.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tiny synchronous HTTP server for the localhost hook listener. Runs on its own
# thread; no async runtime needed. Bound to 127.0.0.1 only.
tiny_http = "0.12"
