[package]
name = "cc-beacon"
version = "0.3.0"
description = "Beacon — desktop status indicator for Claude Code"
authors = ["Beacon contributors"]
license = "MIT"
repository = "https://github.com/earsenio/cc-beacon"
homepage = "https://github.com/earsenio/cc-beacon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beacon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: tray support. image-png: decode our colored PNG tray icons at runtime.
# macos-private-api: required for the transparent floating widget window.
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
# Single-instance guard so only one Beacon owns the listener port.
tauri-plugin-single-instance = "2"
# Persistent JSON store (app config dir) for widget position + view prefs.
tauri-plugin-store = "2"
# OS notifications on state transitions.
tauri-plugin-notification = "2"
# Launch-on-login toggle.
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tiny synchronous HTTP server for the localhost hook listener. Runs on its own
# thread; no async runtime needed. Bound to 127.0.0.1 only.
tiny_http = "0.12"
# Encode the theme-colored status dots to PNG for notification icons. (The tray
# icon uses raw RGBA via tauri::image::Image and needs no encoder.)
png = "0.17"
# OS CSPRNG for the listener auth token (32 random bytes → hex).
getrandom = "0.2"

# --- Click-to-focus terminal (raise a window by its owning PID) ---
# macOS: NSRunningApplication.activate / NSWorkspace.frontmostApplication. These
# match the objc2 versions Tauri already pulls in, so no duplicate-crate bloat.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace", "NSApplication"] }

# Windows: EnumWindows / SetForegroundWindow / GetForegroundWindow.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }
